<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ru.danilov.gitgists.MainActivity"
    >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    >
    <Button
        android:layout_width="258dp"
        android:layout_height="wrap_content"
        android:text="@string/all_gists"
        android:id="@+id/all_gist_button"
        android:theme="@style/PrimaryButton"
        />

    <Button
        android:layout_width="258dp"
        android:layout_height="wrap_content"
        android:text="@string/notes"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:id="@+id/notes_button"
        android:theme="@style/PrimaryButton"

        />
    <Button
        android:layout_width="258dp"
        android:layout_height="wrap_content"
        android:text="@string/all_in_one"
        android:id="@+id/all_in_button"
        android:theme="@style/PrimaryButton"

        />
</LinearLayout>

</RelativeLayout>
